--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                     <p class="w-50">Our event will be held at the Main Office headquarters at Provost & East Building 145 City Road,
                         London.</p>
                 </div>
-                <div class="col-4 pt-5">
+                <div id="googleMap" class="col-4 pt-5">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.2313536454512!2d-0.08861180466411811!3d51.5273163352058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761ca677677bd1%3A0xfe6025085816a202!2s145%20City%20Rd%2C%20London%20EC1V%201AW%2C%20UK!5e0!3m2!1sen!2sus!4v1622866531606!5m2!1sen!2sus"
-                        width="500" height="520" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
 
