--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- Font Awesome Script -->
+    <script src="https://kit.fontawesome.com/5e6471ad4b.js" crossorigin="anonymous"></script>
 
     <title>Hello, world!</title>
 </head>
@@ -105,13 +107,13 @@
     </div>
     <div class="container ">
         <div class="row ">
-
             <div class="col">
                 <img src="https://images.unsplash.com/photo-1555261152-b5cba1485b08?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
                     class="rounded float-right h-75" alt="...">
                 <div class="col">
                     <h3 class="pb-5">The Venue</h3>
-                    <p class="w-50">Our event will be held at the Main Office headquarters at Provost & East Building 145 City Road,
+                    <p class="w-50">Our event will be held at the Main Office headquarters at Provost & East Building
+                        145 City Road,
                         London.</p>
                 </div>
                 <div class="col-4 pt-5">
@@ -121,6 +123,18 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col pb-2 iconSize">
+                <a href="https://www.facebook.com/" target="_blank" class="red"> <i class="fab fa-facebook pr-1"></i></a>
+                <a href="https://twitter.com/?lang=en" target="_blank" class="text-muted"><i class="fab fa-twitter-square pr-1"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="col">
+                <h5 class="float-right">&#169; 2021 Moqups</h4>
+            </div>
         </div>
     </div>
 
